--- a/Todo
+++ b/Todo
@@ -1,12 +1,18 @@
-- Type compatibility/inheritance scheme
-- STOTO/RCLFROM for updating tag types
 - Move >STR from python to sysrpl (and consolidate with DISP?)
 - Figure out how to do user types
+- Think about whether a special 'ROM' store could be used to bootstrap an 
+  RPL-side parser
+- Actually make a STOTO/RCLFROM that can work with unlinked directories maybe
 
+crashes on store dir - Allow storing to firstobj (null store, anonymous local)
+
+no, that's dumb - Type compatibility/inheritance scheme
+
+done - Implement HOOK
+done - STOTO/RCLFROM for updating tag types (as STO/RCL)
 done - Tag parser
 done - Tags in LOCAL arglists for constants
 done - Store symbols as already-split lists of strings
-done - Allow storing to firstobj (null store, anonymous local)
 done - Tag/tuple type: ('symbol': value) or (car, cdr)
 
 Named store (car, cdr ->) (car, cdr ->) (nil, nil)
